--- a/src/app/theme-chooser/theme-chooser/theme-chooser.component.html
+++ b/src/app/theme-chooser/theme-chooser/theme-chooser.component.html
@@ -3,8 +3,8 @@
   <div class="container"> 
     <h4 class="divider line razor" i18n="Theme Chooser@@themeChooser">Themes</h4>
     <ul class="list-group">
-      <li class="list-group-item" [ngClass]=""><button class="btn btn-link" (click)="changeMode('theme_light')">Original Light</button></li>
-      <li class="list-group-item"><button class="btn btn-link" (click)="changeMode('theme_night')">Original Night Mode</button></li>
-      <li class="list-group-item"><button class="btn btn-link" (click)="changeMode('theme_queen')">Queen's style</button></li>
+      <li class="list-group-item" [ngClass]="getClass('theme_light')"><button class="btn btn-link" (click)="changeMode('theme_light')">Original Light</button></li>
+      <li class="list-group-item" [ngClass]="getClass('theme_night')"><button class="btn btn-link" (click)="changeMode('theme_night')">Original Night Mode</button></li>
+      <li class="list-group-item" [ngClass]="getClass('theme_queen')"><button class="btn btn-link" (click)="changeMode('theme_queen')">Queen's style</button></li>
     </ul>
   </div>
