--- a/src/app/stock/stock-card/stock-card.component.html
+++ b/src/app/stock/stock-card/stock-card.component.html
@@ -6,8 +6,10 @@
           <h6><small *ngIf="stock.owned > '0'">{{ stock.owned }}</small><small *ngIf="stock.owned == '0'">:(</small></h6>
         </div>
         <div class="col-5 card-subtitle text-muted">
-          <h6><small i18n="Profit@@profit">Profit:</small> R${{stock.historical.profit}}</h6>
-          <h6><small i18n="ProfitPrct@@profitPrct">Profit(%):</small> {{stock.historical.profit_percent}}%</h6>
+          <h6><small i18n="Profit@@profit">Profit:</small></h6>
+          <h6>R${{stock.historical.profit}}</h6>
+          <h6><small i18n="ProfitPrct@@profitPrct">Profit(%):</small></h6>
+          <h6>{{stock.historical.profit_percent}}%</h6>
         </div>
         <div class="col-3">
           <div class="row">
