--- a/src/app/stock/stock-card/stock-card.component.html
+++ b/src/app/stock/stock-card/stock-card.component.html
@@ -2,9 +2,13 @@
   <div class="card-body">
     <span class="card-title">
       <div class="row">
-        <div class="col-4"><h5>{{stock.code}}</h5>
+        <div class="col-12"><h5>{{stock.name}}</h5>
           <h6><small *ngIf="stock.owned > '0'">{{ stock.owned }}</small><small *ngIf="stock.owned == '0'">:(</small></h6>
         </div>
+      </div>
+
+      <div class="row">
+        <div class="col-4 align-center"><h4>{{ stock.code }}</h4></div>
         <div class="col-5 card-subtitle text-muted">
           <h6><small i18n="Profit@@profit">Profit:</small></h6>
           <h6>R${{stock.historical.profit}}</h6>
