Upgrading the bootstrap

--- a/src/app/experience/experience-edit/experience-edit.component.html
+++ b/src/app/experience/experience-edit/experience-edit.component.html
@@ -47,12 +47,12 @@
         </div>
       </div>
 
-      <button type="button" class="btn btn-primary btn-sm mr-1" (click)="edit();"
+      <button type="button" class="btn btn-primary btn-sm me-1" (click)="edit();"
                             [disabled]="!editExperienceForm.form.valid"><span i18n="Edit@@edit"><span class="fas fa-check"></span></span>
       </button>
 
-      <zen-quick-buy class="mr-1" [experience]="experience" (onOperationBought)="updateExperiment($event)" ></zen-quick-buy>
-      <zen-paper-quick-buy class="mr-1" [experience]="experience"
+      <zen-quick-buy class="me-1" [experience]="experience" (onOperationBought)="updateExperiment($event)" ></zen-quick-buy>
+      <zen-paper-quick-buy class="me-1" [experience]="experience"
                            (onOperationChanged)="updateExperiment($event)" ></zen-paper-quick-buy>
         <button class="btn btn-outline-primary btn-sm" title="return_card" (click)="toggleEdit()" *ngIf="editable"><i class="fas fa-backward"></i></button>
 
