--- a/src/app/menu/menu/menu.component.html
+++ b/src/app/menu/menu/menu.component.html
@@ -1,18 +1,18 @@
 <div class="d-flex flex-column flex-md-row align-items-center pb-3 px-md-4 mb-3 border-bottom box-shadow zen-menu-bg">
-  <span class="my-0 mr-md font-weight-normal"><a class="zen-logo" href="/zenindex">ZT</a></span>
+  <span class="my-0 me-md font-weight-normal"><a class="zen-logo" href="/zenindex">ZT</a></span>
 
   <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
     <div class="row zen-menu">
       <div class="col-12 text-center">
-        <a class="me-2 ms-2 py-2 text-dark text-decoration-none" href="/stock" i18n="Stock@@stock">Stock</a> |
-        <a class="me-2 ms-2 py-2 text-dark text-decoration-none" href="/experience" i18n="Experiences@@experiences">Experiences</a> |
-        <a class="me-2 ms-2 py-2 text-dark text-decoration-none" href="/buy-focus" i18n="Purchases@@purchases">Purchases</a> |
-        <a class="me-2 ms-2 py-2 text-dark text-decoration-none" href="/sell-focus" i18n="Sales@@sales">Sales</a> |
-        <a class="me-2 ms-2 py-2 text-dark text-decoration-none" href="/report-overview" i18n="Report Overview@@reportOverview">Report</a>
+        <a class="me-2 ms-2 py-2 text-decoration-none" href="/stock" i18n="Stock@@stock">Stock</a> |
+        <a class="me-2 ms-2 py-2 text-decoration-none" href="/experience" i18n="Experiences@@experiences">Experiences</a> |
+        <a class="me-2 ms-2 py-2 text-decoration-none" href="/buy-focus" i18n="Purchases@@purchases">Purchases</a> |
+        <a class="me-2 ms-2 py-2 text-decoration-none" href="/sell-focus" i18n="Sales@@sales">Sales</a> |
+        <a class="me-2 ms-2 py-2 text-decoration-none" href="/report-overview" i18n="Report Overview@@reportOverview">Report</a>
       </div>
         <div class="col-12 text-center">
-        <a class="me-2 ms-2 py-2 text-dark text-decoration-none" href="/learning" i18n="Learning@@learning">Learning</a> |
-        <a class="me-2 ms-2 py-2 text-dark text-decoration-none" href="/theme-chooser" i18n="ThemeChooser@@themeChooser">Themes</a>
+        <a class="me-2 ms-2 py-2 text-decoration-none" href="/learning" i18n="Learning@@learning">Learning</a> |
+        <a class="me-2 ms-2 py-2 text-decoration-none" href="/theme-chooser" i18n="ThemeChooser@@themeChooser">Themes</a>
       </div>
     </div>
 
