--- a/src/app/experience/experience-card/experience-card.component.html
+++ b/src/app/experience/experience-card/experience-card.component.html
@@ -11,9 +11,9 @@
       </div>
 
       <div class="col-3">
-        <button class="btn btn-outline-primary btn-sm mr-1" (click)="toggleEdit()" *ngIf="editable"><i class="fas fa-edit"></i></button>
-        <zen-quick-buy class="mr-1" [experience]="experience" (onOperationBought)="updateExperience($event)" ></zen-quick-buy>
-        <zen-paper-quick-buy class="mr-1" [experience]="experience"
+        <button class="btn btn-outline-primary btn-sm me-1" (click)="toggleEdit()" *ngIf="editable"><i class="fas fa-edit"></i></button>
+        <zen-quick-buy class="me-1" [experience]="experience" (onOperationBought)="updateExperience($event)" ></zen-quick-buy>
+        <zen-paper-quick-buy class="me-1" [experience]="experience"
                            (onOperationChanged)="updateExperience($event)" ></zen-paper-quick-buy>
       </div>
 
