--- a/src/app/learning/paper-sell-edit/paper-sell-edit.component.html
+++ b/src/app/learning/paper-sell-edit/paper-sell-edit.component.html
@@ -18,10 +18,10 @@
       </div>
 
       <div class="form-group">
-        <button class="btn btn-primary mr-1" type="button" (click)="save();" 
+        <button class="btn btn-primary me-1" type="button" (click)="save();" 
                                              [disabled]="!sellForm.form.valid"><span i18n="Edit@@edit">Edit</span></button>
 
-        <button class="btn btn-primary mr-1" type="button" (click)="delete();"><span i18n="Delete@@delete">Delete</span></button>
+        <button class="btn btn-primary me-1" type="button" (click)="delete();"><span i18n="Delete@@delete">Delete</span></button>
 
       </div>
 
