--- a/src/app/operation/sell-edit/sell-edit.component.html
+++ b/src/app/operation/sell-edit/sell-edit.component.html
@@ -29,17 +29,17 @@
       </div>
 
       <div class="form-group">
-        <button class="btn btn-sm btn-primary mr-1" type="button" (click)="edit(sell);" *ngIf="!sell.executed"
+        <button class="btn btn-sm btn-primary me-1" type="button" (click)="edit(sell);" *ngIf="!sell.executed"
                                              [disabled]="!sellForm.form.valid" 
                                              i18n-title="Edit Sale title@@editSaleTitle" title="Confirm updates.">
                                                 <i class="fas fa-edit"></i></button>
 
-        <button class="btn btn-sm btn-outline-primary mr-1" type="button" (click)="execute(sell);" *ngIf="!sell.executed"
+        <button class="btn btn-sm btn-outline-primary me-1" type="button" (click)="execute(sell);" *ngIf="!sell.executed"
                                              [disabled]="!sellForm.form.valid"
                                             i18n-title="Execute Sale title@@executeSaleTitle" title="Register the execution of the stock.">
                                                 <i class="fas fa-play-circle"></i></button>
 
-        <zen-quick-sell class="mr-1" [operation]="getQuickSell()" (onOperationSold)="afterSell(sell)"></zen-quick-sell>
+        <zen-quick-sell class="me-1" [operation]="getQuickSell()" (onOperationSold)="afterSell(sell)"></zen-quick-sell>
 
         <zen-archive [operation]="sell" (onOperationArchived)="afterSell(sell)"></zen-archive>
       </div>
