--- a/src/app/overview/operations-overview/operations-overview.component.html
+++ b/src/app/overview/operations-overview/operations-overview.component.html
@@ -33,8 +33,8 @@
   </section>
 
   <div class="fixed-bottom text-center overview-footer mt-3">
-    <div class="row">
-      <div class="col-4 text-left">
+    <div class="row ms-2 me-2">
+      <div class="col-4 text-start">
         <zen-irbr></zen-irbr>
       </div>
 
@@ -42,7 +42,7 @@
         <zen-fortune-teller></zen-fortune-teller>
       </div>
 
-      <div class="col-4 text-right">
+      <div class="col-4 text-end">
         <zen-account-footer></zen-account-footer>
       </div>
     </div>
