--- a/src/app/trade-system/analysis-modal/analysis-modal.component.html
+++ b/src/app/trade-system/analysis-modal/analysis-modal.component.html
@@ -3,12 +3,7 @@
     <h4 class="modal-title" i18n="analysisModal@@analysisModal">
       Analysis
     </h4>
-    <button
-      type="button"
-      class="close"
-      aria-label="Close"
-      (click)="modal.dismiss('Cross click')"
-    >
+    <button type="button" class="close btn btn-light" aria-label="Close" (click)="modal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
