--- a/src/app/trade-system/tech-analysis-create/tech-analysis-create.component.html
+++ b/src/app/trade-system/tech-analysis-create/tech-analysis-create.component.html
@@ -27,7 +27,7 @@
       <button
         type="button"
         (click)="addAnalyze();"
-        class="btn btn-primary"
+        class="btn btn-primary mt-2"
         [disabled]="!addTechAnalysis.form.valid"
         i18n="AddTechAnalyze@@addTechAnalyze">
         Add
