--- a/src/app/experience-create/experience-accordion/experience-accordion.component.html
+++ b/src/app/experience-create/experience-accordion/experience-accordion.component.html
@@ -1,7 +1,7 @@
 <ng-template #content let-modal>
   <div class="modal-header">
     <h4 class="modal-title" i18n="Create experience@@createExperience">Experiment</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+    <button type="button" class="close btn btn-light" aria-label="Close" (click)="modal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
