--- a/src/app/experience/experience-card-modal/experience-card-modal.component.html
+++ b/src/app/experience/experience-card-modal/experience-card-modal.component.html
@@ -5,7 +5,7 @@
     </h4>
     <button
       type="button"
-      class="close"
+      class="close btn btn-light"
       aria-label="Close"
       (click)="modal.dismiss('Cross click')"
     >
