--- a/src/app/operation/buy-edit/buy-edit.component.html
+++ b/src/app/operation/buy-edit/buy-edit.component.html
@@ -11,13 +11,13 @@
         <input type="text" readonly="true" class="form-control form-control-sm border border-primary" id="price" [(ngModel)]="buy.price" name="price">
       </div>
 
-      <div class="form-group">
+      <div class="form-group mt-2">
         <select [(ngModel)]="buy.category" class="form-control" name="category">
           <option *ngFor="let category of buy.categories" [ngValue]="category[0]">{{ category[1] }}</option>
         </select>
       </div>
 
-      <div class="form-group">
+      <div class="form-group mt-2">
         <button type="button" class="btn btn-sm btn-primary me-1" (click)="edit(buy);" [disabled]="!buyEditForm.form.valid"
                               i18n="Edit@@edit"><span class="fas fa-check"></span>
         </button>
@@ -31,7 +31,7 @@
         <input type="text" class="form-control form-control-sm border border-primary" id="nickname" [(ngModel)]="buy.nickname" name="nickname">
       </div>
 
-      <div class="form-group">
+      <div class="form-group mt-3">
         <input type="checkbox" class="form-input" id="archived" name="archived" [(ngModel)]="buy.archived"
                                                                 [checked]="buy.archived">
         <label for="checkbox" i18n="Archived@@archived">Archived</label>
