--- a/src/app/operation/buy-focus/buy-focus.component.html
+++ b/src/app/operation/buy-focus/buy-focus.component.html
@@ -4,9 +4,9 @@
   <div class="row">
     <div class="col-8">
       <form #buyCardForm>
-        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+        <div class="btn-group" data-toggle="buttons">
           <label [ngClass]="['btn', 'btn-secondary', getCheckBoxLabelClass()]">
-            <input type="checkbox" class="form-input" id="show-archived" name="show-archived"
+            <input type="checkbox" class="btn-check" id="show-archived" name="show-archived"
                                                                        [(ngModel)]="archived"
                                                                        [checked]="archived"
                                                                          (click)="updateArchived()">
